# LLMRec-Causal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/catalogs/: headphones.json  laptop.json  phone_charger.json
data/llm_sim/: seeds.json  (+3 more)
paper/: lit_review_citation_revision_plan.md  references.bib  unbundling_llm_recommenders.tex  unbundling_llm_recommenders_major_revised.tex
plans/: claude_implementation_guide_llm_recommender_final_deadline.md  diagnostic_unified_vs_twostage.md  llm_simulation_plan.md  real_product_metadata_collection.md  semisynthetic_llm_simulation_plan.md  simulation_implementation_plan.md  simulation_implementation_plan_tonight.md  working_paper_writeup.md
src/: 00_generate_catalogs.py  01_generate_consumers.py  02_simulate_core_mvp.py  03_estimate_core_mvp.py  04_make_core_figures.py  05_robustness_dgp.py  06_llm_simulation.py  07_estimate_llm.py  08_report_llm.py  09_llm_evaluator.py  10_manual_coding_sample.py  11_manual_vs_evaluator.py  12_evaluator_diagnostics.py  13_mechanism_audit_robust.py  14_semisynthetic_robust.py  15_diagnostic_supply.py  16_diagnostic_evaluate.py  17_diagnostic_demand.py  collect_real_metadata.py  collect_real_metadata_v2.py  collect_real_reviews.py  scrape_amazon_reviews.py  stream_amazon_reviews.py
src/gpu_vllm/: README.md  analyze.py  eval_gpt.py  pyproject.toml  requirements.txt  run_all.sh  supply_history_shock.py
src/gpu_vllm/data/catalogs/: headphones_catalog.csv
src/gpu_vllm/data/gpt_exemplars/: final_few_shot_prompts.json
src/gpu_vllm/data/history_dgp/: headphones_history_qualitative.json
(+359 files in other folders)
