[project]
name = "llmrec-causal"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.10.2",
    "matplotlib>=3.10.9",
    "numbers-parser>=4.18.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.34.0",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
]
